# rs-embed

./: .gitignore  .pre-commit-config.yaml  .prettierignore  404.html  CHANGELOG.md  README.md  RELEASE.md  environment.yml  index.html  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
api/: index.html
api_embedding/: index.html
api_export/: index.html
api_inspect/: index.html
api_load/: index.html
api_specs/: index.html
concepts/: index.html
contributing/: index.html
docs/: api.md  api_embedding.md  api_export.md  api_inspect.md  api_load.md  api_specs.md  choosing_settings.md  concepts.md  contributing.md  extending.md  index.md  limitations.md  model_detail_template.md  models.md  models_reference.md  quickstart.md  releases.md  workflows.md
examples/: demo.ipynb  playground.ipynb  plot_utils.py  quickstart.py  utils_demo.py
extending/: index.html
limitations/: index.html
model_detail_template/: index.html
models/: index.html
models_reference/: index.html
quickstart/: index.html
releases/: index.html
search/: search_index.json
tests/: test_agrifm_ckpt_autodownload.py  test_anysat_output_modes.py  test_api.py  test_api_helpers.py  test_backend_resolution.py  test_batch_overrides_all_models.py  test_cli_parsers.py  test_combined_flow.py  test_copernicus_vendor.py  test_describe_model.py  test_device_resolution.py  test_dofa_loader.py  test_embedder_base_contracts.py  test_embedding.py  test_export_batch.py  test_export_batch_terrafm_s1_fetch.py  test_export_helpers.py  test_export_wrapper.py  test_fetch_overrides.py  (+31 more)
(+178 files in other folders)
