[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rs-embed"
version = "0.1.0"
description = "Unified ROI->embedding interface for remote sensing foundation models (precomputed + on-the-fly)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.24",
  "xarray>=2023.6.0",
  "pyproj>=3.6",
  "shapely>=2.0",
]

[project.optional-dependencies]
gee = ["earthengine-api>=0.1.390", "geemap>=0.30.0"]
torch = ["torch>=2.1"]
models = ["rshf>= 0.1.12"] 
netcdf = ["netCDF4>=1.6"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "affine>=2.4"]

[project.urls]
Homepage = "https://github.com/Dinghye/rs-embed"

[tool.hatch.build.targets.wheel]
packages = ["src/rs_embed"]